kubernetes-istio/kubernetes-istio-scripts/kubernetes/security-context/devops-security-context.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: devops-blue-deployment
  labels:
    app.kubernetes.io/name: devops-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-blue
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:1.0.0
        resources:
          requests:
            cpu : "0.5"
            memory: 500Mi
          limits:
            cpu : "0.5"
            memory: 1Gi
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 4
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 4
        securityContext:
          runAsNonRoot: true
          # not exists, but does not matter since no process requires specific user id 
          runAsUser: 10000
          runAsGroup: 10000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
          # the container needs 3 read-write volumes
          # tmp for java temporary folder
          # 1 folder for upload image, and 1 more folder for upload doc 
          - name: tmp
            mountPath: /tmp/
          - name: upload-image-empty-dir
            mountPath: /upload/image
          - name: upload-doc-empty-dir
            mountPath: /upload/doc
      volumes:
        - name: tmp
          emptyDir: {}
        - name: upload-image-empty-dir
          emptyDir: {}
        - name: upload-doc-empty-dir
          emptyDir: {}
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app.kubernetes.io/name: devops-blue
spec:
  selector:
    app.kubernetes.io/name: devops-blue
  ports:
  - port: 8111
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-devops-blue
  labels:
    app.kubernetes.io/name: devops-blue
spec:
  ingressClassName: nginx
  rules:
  - host: api.devops.local
    http:
      paths:
      - path: /devops/blue
        pathType: Prefix
        backend:
          service:
            name: devops-blue-clusterip
            port:
              number: 8111
